--- a/.gitignore
+++ b/.gitignore
@@ -22,4 +22,4 @@ Session.vim
 
 # Remove Cargo.lock from gitignore if creating an executable, leave it for libraries
 # More information here http://doc.crates.io/guide.html#cargotoml-vs-cargolock
-Cargo.lock
+# Cargo.lock
